SwashRL official changelog

VERSION 0.028

  Changed:
   - The --help message and version number disclosure message now state the
     name of the executable, rather than simply SwashRL, to make it easier to
     change the name of the program later.

  Added:
   - If INCLUDE_COMMIT is true at compile time, the version number output by
     the 'v' key and the --help command line argument will include the current
     commit ID.
   - Added a NAME flag in global.d so that source modders can change the name
     of the game super easily.

VERSION 0.027
Finalized 2018-08-19 07:19 EST

  Added:
   - Mold is now randomly generated and decorates dungeon floors and walls
   - Players and monsters now bleed when hit in combat

VERSION 0.026
Finalized 2018-08-19 04:53 EST

  Changed:
   - The "quit" command now prompts for confirmation before exiting.
   - Pressing the "close window" button in the SDL terminal interface now
     causes the program to quit immediately, without a "See you later"
     message.

  Added:
   - The ability to save and load in maps has been implemented.
   - A command line argument for loading saved maps has been added.
   - A "Save" command has been added.

VERSION 0.025
Finalized 2018-08-10 03:29 EST

  Known bugs:
   - The curses interface doesn't display "seen" tiles when they leave the
     field-of-view.

  Changed:
   - The map is now displayed in such a way that map tiles which have already
     been seen are drawn in the normal display functions.  This allows the
     player to fill out the map by exploring.  Items and monsters are only
     displayed if they are currently in the player's line-of-sight.
   - After extensive testing, it has been determined that the current map
     generation code does not produce errors, so the annoying debug messages
     have been removed.
   - The test map is now available for debug builds, rather than requiring a
     special "testmap" version, and can be accessed by running the game with